# defiance-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  wad_explorer.py
libpng/: libpng.vcxproj
mes2obj/: mes2obj.vcxproj
ski2obj/: ski2obj.vcxproj
snd2wav/: snd2wav.vcxproj
spec/: defiance.ski.hexpat  defiance.wad.hexpat
tex2png/: tex2png.vcxproj
waddump/: waddump.vcxproj
wadexplorer/: CMakeLists.txt  ExplorerView.cpp  ExplorerView.h  GLPage.cpp  GLPage.h  ImagePage.cpp  ImagePage.h  Mainfrm.cpp  Mainfrm.h  StdAfx.h  TextPage.cpp  TextPage.h  WadData.cpp  WadData.h  WadExplorerApp.cpp  WadExplorerApp.h  main.cpp  resource.h
wadlib/: mes.c  ski.c  wadlib.vcxproj
wadsdiff/: wadsdiff.c  wadsdiff.vcxproj
zlib/: zlib.vcxproj
